--- a/src/App.css
+++ b/src/App.css
@@ -8,23 +8,6 @@
   font-size: calc(10px + 2vmin);
   color: white;
 }
-.row {
-  margin-right: 0px;
-  margin-left: 0px;
-  justify-content: center;
-}
-
-.container-fluid{
-  padding: 0px;
-}
-
-.col-12-sm{
-  width: 100vw;
-}
-
-.img-fluid {
-  max-width: 50%;
-}
 
 /* #quienesSomos {
   margin: auto;
@@ -56,42 +39,10 @@
   margin: auto;
   background-color: #141939;
 }
+*/
 
-.logo {
-  height: 60px;
-} */
 
-.navbar {
-  padding: 10px;
-  background-color: rgba(22, 33, 87, 0.5);
-  display: flex;
-  flex-direction: row;
-  box-shadow: 0px 4px 3px rgba(0, 0, 0, .5);
-}
 
-.nav-item:hover,
-:after {
-  border-bottom: 2px solid #2b045d;
-}
-
-.menu {
-  font-size: 1.1rem;
-  width: 100%;
-  justify-content: center;
-}
-
-.navbar-dark .navbar-nav .nav-link {
-  color: rgba(255, 255, 255, .8);
-}
-
-.sociale {
-  display: flex;
-  flex-direction: row;
-}
-
-.nav-sociale {
-  padding: 0px;
-}
 
 #Slide {
   background: url(./ilha.jpg) no-repeat center top;
@@ -127,100 +78,6 @@
   margin-bottom: 3rem;
 } */
 
-.footercontent {
-  background: -webkit-linear-gradient(70deg, #065ea5 30%, rgba(0, 0, 0, 0) 30%), -webkit-linear-gradient(30deg, #0190ba 64%, #3fb2d1 60%);
-  display: flex;
-  flex-flow: row wrap;
-  justify-content: center;
-  margin: auto;
-  padding-top: 20px;
-  padding-bottom: 20px;
-}
-
-.ayuda {
-  margin: auto;
-}
-
-.informacion {
-  margin: auto;
-}
-
-.informacion a {
-  color: white;
-}
-
-.suscripcion {
-  margin: auto;
-}
-
-.footerderechos {
-  background-color: #1e2460;
-  margin: auto;
-  justify-content: center;
-  padding: 1px;
-}
-
-.footerderechos p {
-  margin: auto;
-  display: block;
-  color: white;
-  text-align: center;
-}
-
-h6 {
-  color: white;
-}
-
-.ayuda p {
-  color: white;
-}
-
-/* .button {
-  position: relative;
-  background-color: orange;
-  border: none;
-  font-size: 16px;
-  color: white;
-  padding: 15px;
-  width: 176px;
-  text-align: center;
-  -webkit-transition-duration: 0.4s;
-  /* Safari */
-  /* transition-duration: 0.4s;
-  text-decoration: none;
-  overflow: hidden;
-  cursor: pointer;
- }
-
- .button:after {
-  content: "";
-  background: #90EE90;
-  display: block;
-  position: absolute;
-  padding-top: 300%;
-  padding-left: 350%;
-  margin-left: -20px !important;
-  margin-top: -120%;
-  opacity: 0;
-  transition: all 0.8s;
-}
-
-.button:active:after {
-  padding: 0;
-  margin: 0;
-  opacity: 1;
-  transition: 0s;
-}
-
-.button:hover,
-a:active {
-  color: blue;
-} */
-
-table.w3-table-all {
-  margin: 20px 0;
-}
-
 .bg-warning {
   position: absolute;
   right: 0px;
@@ -235,10 +92,7 @@ table.w3-table-all {
   font-size: larger;
 }
 
-.botonEnviar {
-  margin: auto;
-  width: 8rem;
-}
+
 
 .promo-foto {
   margin-right: 4rem;
@@ -274,16 +128,7 @@ table.w3-table-all {
   max-height: 256px;
 } */
 
-.registro {
-  background-image: url(https://cdn.inogen.com/wp-content/uploads/2014/01/travel-by-plane.jpg);
-  background-size: 100% 100%;
-}
 
-.form-registro {
-  background-color: rgba(128, 128, 128, 0.397);
-  margin: 3rem 6rem 3rem;
-  padding: 1rem 8rem;
-}
 
 #estasregistrado {
   color: whitesmoke;
@@ -406,54 +251,6 @@ table.w3-table-all {
 } */
 
 @media (max-width: 992px) {
-  .navbar {
-    background-color: rgba(22, 33, 87, 0.7);
-    height: 80px;
-  }
-
-  .navbar-dark .navbar-toggler {
-    background-color: rgba(22, 33, 87, 0.7);
-    z-index: 99999;
-  }
-
-  #menuBurguer {
-    margin-left: 40vw;
-    background-color: rgba(19, 149, 200, 0.897);
-    font-style: italic;
-    color: #fef200;
-    margin-top: -80px;
-    margin-right: -10px;
-    padding-top: 50px;
-    padding-right: 10px;
-    box-shadow: 0px 4px 3px rgba(0, 0, 0, .5);
-  }
-
-  .navbar-dark .navbar-nav .nav-link {
-    color: rgba(255, 255, 255, .9);
-  }
-
-  .menu {
-    align-items: flex-end;
-    padding-right: 5px;
-    text-align: right;
-    padding: 10px;
-  }
-
-  .icoSociale {
-    display: none;
-  }
-
-  .nav-item {
-    padding: 10px 0 10px 0;
-    font-size: 2.2em;
-  }
-
-  .nav-item:hover,
-  :after {
-    width: 100%;
-    border-bottom: 2px solid #2b045d;
-  }
-
   .text-white {
     font-size: 1.2rem;
   }
