--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -66,7 +66,7 @@
         z-index: 99999;
       }
       #menuBurguer {
-        margin-left: 40vw;
+        margin-left: 70vw;
         background-color: rgba(19, 149, 200, 0.897);
         font-style: italic;
         color: #fef200;
@@ -75,6 +75,9 @@
         padding-top: 50px;
         padding-right: 10px;
         box-shadow: 0px 4px 3px rgba(0, 0, 0, .5);
+        @media (max-width: 768px){
+          margin-left: 50vw;
+        }
         .menu {
           align-items: flex-end;
           padding-right: 5px;
